add prompt firewall to v3.3

--- a/docs/getting-started/3.3-release.md
+++ b/docs/getting-started/3.3-release.md
@@ -32,6 +32,18 @@ This prevents false negatives where crawlers fail to access protected content. U
 
 ![alt text](./images/release-notes/v3.3/image-2.png)
 
+## Prompt Firewall Rules for LLM Defense
+
+LLM Prompt Firewall now inspects inputs and outputs to block injections, jailbreaks, and toxic content in real time based on the set prompt policies in the applications. This layer sits before your model to prevent data leaks. It stops unauthorized access and malicious inputs to enforce compliance with NIST and EU AI Act standards.
+
+**See Onboarding Steps:** [Onboard LLM Defense App](https://help.accuknox.com/use-cases/llm-defense-app-onboard/).
+
+**Read Detailed Blog:** [Protecting LLMs with AccuKnox's Prompt Firewall](https://accuknox.com/blog/protecting-llms-with-accuknoxs-prompt-firewall/).
+
+![alt text](image-1.png)
+![alt text](image-2.png)
+
+
 ## SBOM Comparison Project
 
 We added a comparison utility for Software Bill of Materials (SBOM). Users can upload CycloneDX JSON files into a project and select two versions to compare.
@@ -54,7 +66,7 @@ Dashboard trend widgets now display 30 days of historical data. This replaces th
 
 We also added 8 new VM-related widgets to the configurable dashboard library for better visualization of virtual machine vulnerabilities.
 
-![alt text](image.png)
+![alt text](./images/release-notes/v3.3/image.png)
 
 ![alt text](./images/release-notes/v3.3/image-9.png)
 
