--- a/docs/getting-started/3.3-release.md
+++ b/docs/getting-started/3.3-release.md
@@ -43,8 +43,8 @@ LLM Prompt Firewall now inspects inputs and outputs to block injections, jailbre
 ![alt text](image-1.png)
 ![alt text](image-2.png)
 
-<!-- COMMENTED OUT FOR NOW AS PER RAVI'S ADVICE
-## SBOM Comparison Project
+
+## SBOM (Phase I) - Version Comparison Utility
 
 We added a comparison utility for Software Bill of Materials (SBOM). Users can upload CycloneDX JSON files into a project and select two versions to compare.
 
@@ -52,7 +52,6 @@ The interface highlights added packages, removed packages, and version changes b
 
 ![alt text](./images/release-notes/v3.3/image-7.png)
 
--->
 
 ## Simplified In-Cluster Image Scanning Onboarding
 
