--- a/docs/getting-started/3.3-release.md
+++ b/docs/getting-started/3.3-release.md
@@ -148,16 +148,12 @@ Customers deploy the AccuKnox Operator directly from the OpenShift console. Air-
 
 - We now support deploying the AccuKnox VM scanning tool through an OpenShift Operator. Users will soon be able to install it directly from OperatorHub using the OpenShift Software Catalog. Until it is listed, customers can use the Helm chart to install the operator, please contact `support@accuknox.com` for assistance.
 
-- We introduced scripts designed specifically for OpenShift clusters. These scripts populate the control plane with generic VM vulnerability data. Findings are categorized under the VM vulnerability section without strictly differentiating between Windows or Linux subtypes.
-
 ![alt text](./images/release-notes/v3.3/image-18.png)
 
 ### Agent-Based
 For ESXi or other environments without agentless support, customers install a lightweight VM agent using a single curl command on each VM.
 
-- **Non-air-gapped**: A single command (curl https://.../install.sh | sh -) installs the agent and pulls all required components from AccuKnox.
-- **Air-gapped:** The same installer is used to support air-gapped environment and the vulnerability database is pulled from the customer’s private registry or a local file path.
-This path mirrors the standard onboarding flow and supports options like scan interval and malware-scanning setup.
+ We support airgapped installation as well.
 
 ## AccuKnox Vulnerability Database Enrichment
 
