--- a/docs/getting-started/3.3-release.md
+++ b/docs/getting-started/3.3-release.md
@@ -5,7 +5,7 @@ description: Discover the latest features, enhancements, and fixes in AccuKnox v
 
 # AccuKnox v3.3 Release Notes
 
-![alt text](./images/release-notes/v3.3/image-21.png)
+![alt text](image-6.png)
 
 AccuKnox v3.3 expands the platform's depth with a focus on operational efficiency and extended coverage.
 
