fix: openshift VM scanning installation mode

--- a/docs/getting-started/3.3-release.md
+++ b/docs/getting-started/3.3-release.md
@@ -137,12 +137,11 @@ Uses a Terraform-based onboarding flow where customers download a small Terrafor
 ![alt text](image-5.png)
 
 ### Private Cloud (RedHat OpenShift)
-Customers deploy the AccuKnox Operator directly from the OpenShift console. Air-gapped clusters use special images provided for offline environments.
+Customers deploy the AccuKnox VM Scanning Operator directly from the OpenShift console. Air-gapped clusters use special images provided for offline environments.
 
 ![alt text](./images/release-notes/v3.3/image-19.png)
 
-
-- We now support deploying the AccuKnox VM scanning tool through an OpenShift Operator. Users will soon be able to install it directly from OperatorHub using the OpenShift Software Catalog. Until it is listed, customers can use the Helm chart to install the operator, please contact `support@accuknox.com` for assistance.
+Users will soon be able to install it directly from OperatorHub using the OpenShift Software Catalog. Until it is listed, customers can use AccuKnox CatalogSource to install the operator, please contact `support@accuknox.com` for assistance.
 
 ![alt text](./images/release-notes/v3.3/image-18.png)
 
